import "dependency_entry.proto";

import "app_auth.proto";

import "schedule_expression_entry.proto";

option java_package = "com.mogujie.jarvis.protocol";

option java_outer_classname = "JobProtos";

//1.submitJob
message RestSubmitJobRequest {
    required AppAuth app_auth = 1;
    required string user = 2;
    required string job_name = 3;
    required string job_type = 4;
    required int32 status = 5;
    required string content = 6;
    optional string parameters = 7 [default = ""];
    optional string app_name = 8;
    required int32 worker_group_id = 9;
    optional int32 priority = 10 [default = 1];
    optional int64 active_start_time = 11;
    optional int64 active_end_time = 12;
    optional int32 expired_time = 13 [default = 600];
    optional int32 failed_attempts = 14 [default = 0];
    optional int32 failed_interval = 15 [default = 3];
    optional ScheduleExpressionEntry expression_entry = 16;
    repeated DependencyEntry dependency_entry = 17;
}

message ServerSubmitJobResponse {
    optional int64 job_id = 1;
    required bool success = 2;
    optional string message = 3 [default = ""];
}

//2.modifyJob
message RestModifyJobRequest {
    required AppAuth app_auth = 1;
    required string user = 2;
    required int64 job_id = 3;
    optional string job_name = 4;
    optional string job_type = 5;
    optional string content = 6;
    optional string parameters = 7;
    optional string app_name = 8;
    optional int32 worker_group_id = 9;
    optional int32 priority = 10;
    optional int64 active_start_time = 11;
    optional int64 active_end_time = 12;
    optional int32 expired_time = 13;
    optional int32 failed_attempts = 14;
    optional int32 failed_interval = 15;
    optional ScheduleExpressionEntry expression_entry = 16;
    repeated DependencyEntry dependency_entry = 17;
}

message ServerModifyJobResponse {
    required bool success = 1;
    optional string message = 2 [default = ""];
}


//3.modifyJobStatus
message RestModifyJobStatusRequest {
    required AppAuth app_auth = 1;
    required string user = 2;
    required int64 job_id = 3;
    required int32 status = 4;
}

message ServerModifyJobStatusResponse {
    required bool success = 1;
    optional string message = 2 [default = ""];
}

//4.queryJobRelation
message JobStatusEntry {
    required int64 job_id = 1;
    required int32 status = 2;
}

message RestQueryJobRelationRequest {
    required AppAuth app_auth = 1;
    required string user = 2;
    required int64 job_id = 3;
    required int32 relation_type = 4;
}

message ServerQueryJobRelationResponse {
    repeated JobStatusEntry job_status_entry = 1;
    required bool success = 2;
    optional string message = 3 [default = ""];
}
