import "map_entry.proto";

option java_package = "com.mogujie.jarvis.protocol";
option java_outer_classname = "ModifyJobProtos";


message RestServerModifyJobRequest {
    required int64 job_id = 1;
    optional string job_name = 2;
    optional string cron_expression = 3;
    optional string app_name = 4;
    optional string app_key = 5;
    optional string user = 6;
    optional string job_type = 7;
    optional string command = 8;
    optional int32 group_id = 9;
    optional int32 priority = 10 [default = 1];
    optional int32 reject_retries = 11 [default = 0];
    optional int32 reject_interval = 12 [default = 3];
    optional int32 failed_retries = 13 [default = 0];
    optional int32 failed_interval = 14 [default = 3];
    optional int64 start_time = 15;
    optional int64 end_time = 16;
    optional int64 origin_job_id = 17;
    optional string common_depend_strategy = 18;
    optional string last_depend_strategy = 19;
    optional MapEntry parameters = 20;
    optional int32 fixed_delay = 21;
}


message ServerModifyJobResponse {
    required int64 job_id = 1;
    required bool success = 2;
    optional string message = 3 [default = ""];
}